prod/tvplatform-user-frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tvplatform-user-frontend
  namespace: users
  labels:
    app: tvplatform-user-frontend
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tvplatform-user-frontend
      env: prod
  template:
    metadata:
      labels:
        app: tvplatform-user-frontend
        env: prod
    spec:
      containers:
      - name: tvplatform-user-frontend
        image: registry.digitalocean.com/obs-tvplatform-backend/tvplatform-user-frontend:17-prod # will be updated by jenkins PRs
        imagePullPolicy: Always
      imagePullSecrets:
      - name: obs-tvplatform-backend
