prod/tvplatform-user-frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tvplatform-user-frontend
  namespace: users
spec:
  type: NodePort
  selector:
    app: tvplatform-user-frontend
    env: dev
  ports:
  - name: http
    port: 80 # svc port
    targetPort: 3000 # app port
    # nodePort: 30002  # Port accessible externally on each node
